added icmla 2013 edition commit pending changes to icmla2012

--- a/icmla2013/index.html
+++ b/icmla2013/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>ICMLA 2012 - MLMD</title>
+	<title>ICMLA 2013 - MLMD</title>
 <style>
 .header {width:600px; text-align:center;margin-left:auto; 
     margin-right:auto;}
@@ -18,14 +18,14 @@ table{table-layout:auto;border-spacing:0px 0px;margin:0}
 <div class="header">
 <h2>CALL FOR PAPERS</h2>
 <h3>Machine Learning with Multimedia Data</h3>
-Special session at the 11th IEEE International Conference on Machine Learning and Applications (ICMLA 2012)<br/>
-<i>Boca Raton Marriott Hotel, Boca Raton, Florida, USA (Dec 12-15, 2012)</i><br/>
-<a href="http://www.icmla-conference.org/icmla12/">http://www.icmla-conference.org/icmla12/</a>
+Special session at the 12th IEEE International Conference on Machine Learning and Applications (ICMLA 2013)<br/>
+<i>Miami, Florida, USA, (Dec 4-7, 2013)</i><br/>
+<a href="http://www.icmla-conference.org/icmla13/">http://www.icmla-conference.org/icmla13/</a>
 </div>
 
-<p>Vast amounts of new data in a large variety of formats and media modalities are made available worldwide on a daily basis. Much of this information is not easily reachable; for instance, access to rich multimedia information (e.g. audio, images, video) is an extremely challenging problem. Machine learning is used with varying success for diverse tasks dealing with multimedia data. Many problems remain, including effective data representation schemes, semantic-enabled feature representations, algorithms capable of dealing with high-dimension spatio-temporal data, fusion of multi-modal content or techniques for enabling cross-modal access to information (e.g. textual queries of video recordings).</p>
+<p>Vast amounts of new data in a large variety of formats and media modalities are made available worldwide on a daily basis. Much of this information is not easily reachable; for instance, accessing relevant rich multimedia information (e.g. audio, images, video) is an extremely challenging problem. Machine learning is used with varying success for diverse tasks dealing with multimedia data. Many problems remain, including effective data representation schemes, semantic-enabled feature representations, algorithms capable of dealing with high-dimensional spatio-temporal data, fusion of multi-modal content features or techniques for enabling cross-modal access to information (e.g. textual queries of video recordings).</p>
 
-<p>This session aims at bringing together researchers working on applying machine learning to different types of data, including music, video, speech, or images. We welcome papers describing work in progress and encourage submissions that make datasets available to the community.</p>
+<p>This session aims at bringing together researchers working on applying machine learning to multimedia data, including music, video, speech, or images. We welcome papers describing work in progress and encourage submissions that make datasets available to the community.</p>
 
 <p>Topics covered by this special session include, but are not limited, to the following:</p>
 
@@ -44,6 +44,7 @@ Special session at the 11th IEEE International Conference on Machine Learning an
 </td>
 <td>
 <ul>
+<li>Deep Learning applied to multimedia content</li>
 <li>Optimal Learning from multimodal features</li>
 <li>Semantic-aware interfaces for multimedia and cross-media navigation</li>
 <li>Multimedia information retrieval</li><li>Spoken document retrieval </li>
@@ -54,22 +55,22 @@ Special session at the 11th IEEE International Conference on Machine Learning an
 </tr>
 </tbody></table>
 
-<p>Accepted papers will be published in the proceedings of the 11th&nbsp;IEEE ICMLA 2012 conference.</p>
+<p>Accepted papers will be published in the proceedings of the 12th&nbsp;IEEE ICMLA 2013 conference.</p>
 
 <h4>IMPORTANT DATES</h4>
 <table><tbody>
 <tr>
 <td>
-<b>Paper Submission Deadline</b><br/>
-Acceptance Notification<br/>
-Camera-ready Submission and Registration&nbsp;&nbsp;&nbsp;&nbsp;<br/>
-ICMLA Conference <br/>
+	<b>Paper Submission Deadline</b><br/>
+	Acceptance Notification<br/>
+	Camera-ready Submission and Registration&nbsp;&nbsp;&nbsp;&nbsp;<br/>
+	ICMLA Conference <br/>
 </td>
 <td>
-	<b><del>August 6th 2012</del> August 20th 2012</b><br/>
-	<del>September 7th 2012</del> September 17th 2012<br/>
-October 1st 2012<br/>
-December 12th -15th 2012<br/>
+	<b>August 5th 2013</b><br/>
+	September 10th 2013<br/>
+	October 10th 2013<br/>
+	December 4th -7th 2013<br/>
 </td>
 </tr>
 </tbody></table>
@@ -92,6 +93,8 @@ jspw@tid.es<br/>
 </tbody></table>
 
 <h4>PROGRAM COMMITTEE</h4>
+To be confirmed...
+<!--
 Hanna Lukashevich (Fraunhofer IDMT)<br/>
 Maurizio Montagnuolo (RAI, Italy)<br/>
 Roberto Basili (University of Roma, Tor Vergata)<br/>
@@ -112,6 +115,7 @@ Jonathon Hare (University of Southampton, UK)<br/>
 Xavier Sevillano (Universidad La Salle, Spain)<br/>
 Xavier Anguera (Telefonica Research, Spain)<br/>
 Daniel Gärtner (Fraunhofer IDMT, Semantic Music Technologies)<br/>
+-->
 </div>
 </body>
 </html>
