added Daniel Gärtner to PC

--- a/icmla2013/index.html
+++ b/icmla2013/index.html
@@ -97,6 +97,7 @@ Adrian Ulges (Image Understanding and Pattern Recognition Research Group, German
 Alexandros Karatzoglou (Telefonica Research)<br/>
 Chengcui Zhang (Department of Computer and Information Sciences, The University of Alabama at Birmingham, AL, USA)<br/>
 Christian Raymond (INSA/IRISA)<br/>
+Daniel Gärtner (Fraunhofer)<br/>
 Deepu Rajan (NTU)<br/>
 Hanna Lukashevich (Fraunhofer IDMT)<br/>
 Joan Codina (Universitat Pompeu Fabra, Web Research Group, Spain)<br/>
