Updated with paper submission and participation instructions

--- a/icmla2013/index.html
+++ b/icmla2013/index.html
@@ -27,6 +27,7 @@ Special session at the 12th IEEE International Conference on Machine Learning an
 
 <p>This session aims at bringing together researchers working on applying machine learning to multimedia data, including music, video, speech, or images. We welcome papers describing work in progress and encourage submissions that make datasets available to the community.</p>
 
+<h4>TOPICS OF INTEREST</h4>
 <p>Topics covered by this special session include, but are not limited, to the following:</p>
 
 <table class="topics"><tbody>
@@ -55,7 +56,13 @@ Special session at the 12th IEEE International Conference on Machine Learning an
 </tr>
 </tbody></table>
 
-<p>Accepted papers will be published in the proceedings of the 12th&nbsp;IEEE ICMLA 2013 conference.</p>
+<h4>PAPER SUBMISSION AND PARTICIPATION</h4>
+<p>For this edition of the ICMLA Special Session on Machine Learning with Multimedia Data, papers will be divided into two categories:
+<ul>
+<li>Oral Presentation Papers, up to 6 pages long</li>
+<li>Poster Presentation Papers, up to 4 pages long</li>
+</ul>
+Accepted papers will be published in the proceedings of the 12th IEEE ICMLA 2013 conference. Papers submitted for reviewing should conform to IEEE specifications. Further submission and formatting instructions can be found at <a href="http://www.icmla-conference.org/icmla13/submit.htm">http://www.icmla-conference.org/icmla13/submit.htm</a></p>
 
 <h4>IMPORTANT DATES</h4>
 <table><tbody>
@@ -110,6 +117,7 @@ Maurizio Montagnuolo (RAI, Italy)<br/>
 Rafael Ramirez (Music Technology Group, Universitat Pompeu Fabra)<br/>
 Sam Davies (BBC R&amp;D)<br/>
 Xavier Anguera (Telefonica Research, Spain)<br/>
+Xavier Sevillano (La Salle, Spain)<br/>
 </div>
 </body>
 </html>
