added additional PC members

--- a/icmla2013/index.html
+++ b/icmla2013/index.html
@@ -101,9 +101,11 @@ jspw@tid.es<br/>
 
 <h4>PROGRAM COMMITTEE (preliminary)</h4>
 Adrian Ulges (Image Understanding and Pattern Recognition Research Group, German Research Center for Artiﬁcial Intelligence (DFKI), Kaiserslautern)<br/>
+Alberto Messina (RAI, Italy)<br/>
 Alexandros Karatzoglou (Telefonica Research)<br/>
 Chengcui Zhang (Department of Computer and Information Sciences, The University of Alabama at Birmingham, AL, USA)<br/>
 Christian Raymond (INSA/IRISA)<br/>
+Cosmin Cabulea (Deutsche Welle)<br/>
 Daniel Gärtner (Fraunhofer)<br/>
 Deepu Rajan (NTU)<br/>
 Hanna Lukashevich (Fraunhofer IDMT)<br/>
@@ -114,6 +116,7 @@ Lin Yang (Google)<br/>
 Linas Baltrunas (Telefonica Research)<br/>
 Maria-cristina Marinescu (BSC)<br/>
 Maurizio Montagnuolo (RAI, Italy)<br/>
+Rafael Banchs (Institute for Infocomm Research, Singapore)<br/>
 Rafael Ramirez (Music Technology Group, Universitat Pompeu Fabra)<br/>
 Sam Davies (BBC R&amp;D)<br/>
 Xavier Anguera (Telefonica Research, Spain)<br/>
