more PC members

--- a/icmla2013/index.html
+++ b/icmla2013/index.html
@@ -119,8 +119,10 @@ Maurizio Montagnuolo (RAI, Italy)<br/>
 Rafael Banchs (Institute for Infocomm Research, Singapore)<br/>
 Rafael Ramirez (Music Technology Group, Universitat Pompeu Fabra)<br/>
 Sam Davies (BBC R&amp;D)<br/>
+Stefan Siersdorfer (L3S, Germany)<br/>
 Xavier Anguera (Telefonica Research, Spain)<br/>
 Xavier Sevillano (La Salle, Spain)<br/>
+Yannick Estève (LIUM, France)<br/>
 </div>
 </body>
 </html>
