--- a/icmla2013/index.html
+++ b/icmla2013/index.html
@@ -74,7 +74,7 @@ Accepted papers will be published in the proceedings of the 12th IEEE ICMLA 2013
 	ICMLA Conference <br/>
 </td>
 <td>
-	<b>August 5th 2013</b><br/>
+	<del>August 5th 2013</del>&nbsp;<b style="color:red">August 9th 2013</b><br/>
 	September 10th 2013<br/>
 	October 10th 2013<br/>
 	December 4th -7th 2013<br/>
@@ -100,25 +100,25 @@ jspw@tid.es<br/>
 </tbody></table>
 
 <h4>PROGRAM COMMITTEE (preliminary)</h4>
-Adrian Ulges (Image Understanding and Pattern Recognition Research Group, German Research Center for Artiﬁcial Intelligence (DFKI), Kaiserslautern)<br/>
+Adrian Ulges (German Research Center for Artiﬁcial Intelligence (DFKI), Germany)<br/>
 Alberto Messina (RAI, Italy)<br/>
-Alexandros Karatzoglou (Telefonica Research)<br/>
-Chengcui Zhang (Department of Computer and Information Sciences, The University of Alabama at Birmingham, AL, USA)<br/>
-Christian Raymond (INSA/IRISA)<br/>
-Cosmin Cabulea (Deutsche Welle)<br/>
-Daniel Gärtner (Fraunhofer)<br/>
+Alexandros Karatzoglou (Telefonica Research, Spain)<br/>
+Chengcui Zhang (The University of Alabama at Birmingham, AL, USA)<br/>
+Christian Raymond (INSA/IRISA, France)<br/>
+Cosmin Cabulea (Deutsche Welle, Germany)<br/>
+Daniel Gärtner (Fraunhofer Institute Germany)<br/>
 Deepu Rajan (NTU)<br/>
-Hanna Lukashevich (Fraunhofer IDMT)<br/>
+Hanna Lukashevich (Fraunhofer IDMT, Germany)<br/>
 Joan Codina (Universitat Pompeu Fabra, Web Research Group, Spain)<br/>
-Jordi Luque (Telefonica Research)<br/>
-Kyogu Lee<br/>
+Jordi Luque (Telefonica Research, Spain)<br/>
+Kyogu Lee (Seoul National University, Korea)<br/>
 Lin Yang (Google)<br/>
-Linas Baltrunas (Telefonica Research)<br/>
-Maria-cristina Marinescu (BSC)<br/>
+Linas Baltrunas (Telefonica Research, Spain)<br/>
+Maria-cristina Marinescu (BSC, Spain)<br/>
 Maurizio Montagnuolo (RAI, Italy)<br/>
 Rafael Banchs (Institute for Infocomm Research, Singapore)<br/>
-Rafael Ramirez (Music Technology Group, Universitat Pompeu Fabra)<br/>
-Sam Davies (BBC R&amp;D)<br/>
+Rafael Ramirez (Music Technology Group, Universitat Pompeu Fabra, Spain)<br/>
+Sam Davies (BBC R&amp;D, UK)<br/>
 Stefan Siersdorfer (L3S, Germany)<br/>
 Xavier Anguera (Telefonica Research, Spain)<br/>
 Xavier Sevillano (La Salle, Spain)<br/>
