2nd deadline extension

--- a/icmla2013/index.html
+++ b/icmla2013/index.html
@@ -74,8 +74,8 @@ Accepted papers will be published in the proceedings of the 12th IEEE ICMLA 2013
 	ICMLA Conference <br/>
 </td>
 <td>
-	<del>August 5th 2013</del>&nbsp;<b style="color:red">August 9th 2013</b><br/>
-	September 10th 2013<br/>
+	<del>August 5th 2013</del>&nbsp;<b style="color:red">August 31st 2013</b><br/>
+	October 1st 2013<br/>
 	October 10th 2013<br/>
 	December 4th -7th 2013<br/>
 </td>
